# 4_

./: CMakeLists.txt  actions.cpp  actions.h  draws.cpp  draws.h  errors.h  figure.cpp  figure.h  figure.txt  link.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp  point.h  process.cpp  process.h  transformations.cpp  transformations.h
inc/: figure.h  link.h  point.h  transformations.h
src/: figure.cpp  link.cpp  main.cpp  mainwindow.ui  point.cpp  process.cpp
